examples/expression/y.output

state 0
	$accept: .start $end 

	'('  shift 3
	'-'  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	expression  goto 2
	number  goto 4
	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  expression.    (1)
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 

	'-'  shift 9
	'+'  shift 8
	'*'  shift 10
	'/'  shift 11
	.  reduce 1 (src line 23)


state 3
	expression:  '('.expression ')' 

	'('  shift 3
	'-'  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	expression  goto 12
	number  goto 4

state 4
	expression:  number.    (7)

	.  reduce 7 (src line 50)


state 5
	expression:  '-'.expression 

	'('  shift 3
	'-'  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	expression  goto 13
	number  goto 4

state 6
	number:  INTEGER.    (9)

	.  reduce 9 (src line 60)


state 7
	number:  FLOAT.    (10)

	.  reduce 10 (src line 66)


state 8
	expression:  expression '+'.expression 

	'('  shift 3
	'-'  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	expression  goto 14
	number  goto 4

state 9
	expression:  expression '-'.expression 

	'('  shift 3
	'-'  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	expression  goto 15
	number  goto 4

state 10
	expression:  expression '*'.expression 

	'('  shift 3
	'-'  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	expression  goto 16
	number  goto 4

state 11
	expression:  expression '/'.expression 

	'('  shift 3
	'-'  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	expression  goto 17
	number  goto 4

state 12
	expression:  '(' expression.')' 
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 

	')'  shift 18
	'-'  shift 9
	'+'  shift 8
	'*'  shift 10
	'/'  shift 11
	.  error


state 13
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  '-' expression.    (8)

	'*'  shift 10
	'/'  shift 11
	.  reduce 8 (src line 54)


state 14
	expression:  expression.'+' expression 
	expression:  expression '+' expression.    (3)
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 

	'*'  shift 10
	'/'  shift 11
	.  reduce 3 (src line 34)


state 15
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression '-' expression.    (4)
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 

	'*'  shift 10
	'/'  shift 11
	.  reduce 4 (src line 38)


state 16
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression '*' expression.    (5)
	expression:  expression.'/' expression 

	.  reduce 5 (src line 42)


state 17
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression '/' expression.    (6)

	.  reduce 6 (src line 46)


state 18
	expression:  '(' expression ')'.    (2)

	.  reduce 2 (src line 29)


11 terminals, 4 nonterminals
11 grammar rules, 19/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
53 working sets used
memory: parser 14/240000
11 extra closures
43 shift entries, 1 exceptions
9 goto entries
6 entries saved by goto default
Optimizer space used: output 24/240000
24 table entries, 0 zero
maximum spread: 11, maximum offset: 11
